x-overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 body{
+
+  overflow-x: hidden;
   width: 100%;
   height: 100%;
 
